--- a/frontend/monthly_dashboard.html
+++ b/frontend/monthly_dashboard.html
@@ -34,6 +34,9 @@
             <div id="categories-table"></div>
             <div id="categories-chart" style="height:400px"></div>
 
+            <h2>Category & Tag Breakdown</h2>
+            <div id="category-tag-donut" style="height:400px"></div>
+
             <h2>Group Totals</h2>
             <div id="groups-table"></div>
             <div id="groups-chart" style="height:400px"></div>
@@ -89,6 +92,42 @@
         });
     }
 
+    function buildDonutChart(id, categories, tags){
+        const colors = Highcharts.getOptions().colors;
+        const categoryData = [];
+        const tagData = [];
+
+        categories.forEach((c, i) => {
+            const color = colors[i % colors.length];
+            categoryData.push({ name: c.name, y: parseFloat(c.total), color });
+
+            tags.filter(t => t.category === c.name).forEach(t => {
+                tagData.push({
+                    name: t.name,
+                    y: parseFloat(t.total),
+                    color: Highcharts.color(color).brighten(0.1).get()
+                });
+            });
+        });
+
+        Highcharts.chart(id, {
+            chart: { type: 'pie' },
+            title: { text: 'Categories and Tags' },
+            tooltip: { pointFormatter: function(){ return '£' + Highcharts.numberFormat(this.y, 2); } },
+            plotOptions: {
+                pie: {
+                    dataLabels: {
+                        formatter: function(){ return this.point.name + ': £' + Highcharts.numberFormat(this.y, 2); }
+                    }
+                }
+            },
+            series: [
+                { name: 'Categories', data: categoryData, size: '60%', dataLabels: { distance: -30 } },
+                { name: 'Tags', data: tagData, size: '80%', innerSize: '60%' }
+            ]
+        });
+    }
+
     function loadMonth(year, month){
         fetch('../php_backend/public/monthly_dashboard.php?year=' + year + '&month=' + month)
             .then(resp => resp.json())
@@ -106,6 +145,7 @@
                 buildChart('tags-chart', 'Tag Totals', data.tags);
                 buildTable('categories-table', data.categories, days);
                 buildChart('categories-chart', 'Category Totals', data.categories);
+                buildDonutChart('category-tag-donut', data.categories, data.tags);
                 buildTable('groups-table', data.groups, days);
                 buildChart('groups-chart', 'Group Totals', data.groups);
             });
