Add basic user authentication and management

--- a/frontend/menu.html
+++ b/frontend/menu.html
@@ -13,4 +13,6 @@
     <li><a href="categories.html"><i class="fa-solid fa-folder-open"></i> Manage Categories</a></li>
     <li><a href="groups.html"><i class="fa-solid fa-users"></i> Manage Groups</a></li>
     <li><a href="logs.html"><i class="fa-solid fa-clipboard-list"></i> View Logs</a></li>
+    <li><a href="../users.php"><i class="fa-solid fa-user"></i> Manage Users</a></li>
+    <li><a href="../logout.php"><i class="fa-solid fa-right-from-bracket"></i> Logout</a></li>
 </ul>
