--- a/frontend/menu.html
+++ b/frontend/menu.html
@@ -10,6 +10,7 @@
     <li><a class="flex items-center text-blue-600 hover:text-blue-800" href="report.html"><i class="fa-solid fa-table mr-2"></i> Transaction Reports</a></li>
     <li><a class="flex items-center text-blue-600 hover:text-blue-800" href="search.html"><i class="fa-solid fa-magnifying-glass mr-2"></i> Search Transactions</a></li>
     <li><a class="flex items-center text-blue-600 hover:text-blue-800" href="tags.html"><i class="fa-solid fa-tags mr-2"></i> Manage Tags</a></li>
+    <li><a class="flex items-center text-blue-600 hover:text-blue-800" href="missing_tags.html"><i class="fa-solid fa-circle-question mr-2"></i> Missing Tags</a></li>
     <li><a class="flex items-center text-blue-600 hover:text-blue-800" href="categories.html"><i class="fa-solid fa-folder-open mr-2"></i> Manage Categories</a></li>
     <li><a class="flex items-center text-blue-600 hover:text-blue-800" href="groups.html"><i class="fa-solid fa-users mr-2"></i> Manage Groups</a></li>
     <li><a class="flex items-center text-blue-600 hover:text-blue-800" href="logs.html"><i class="fa-solid fa-clipboard-list mr-2"></i> View Logs</a></li>
