--- a/frontend/categories.html
+++ b/frontend/categories.html
@@ -50,8 +50,12 @@ async function loadCategories() {
         tagBtn.textContent = 'Assign Tag';
         tagBtn.className = 'ml-2 bg-gray-600 text-white px-2 py-1 rounded';
         tagBtn.addEventListener('click', async () => {
-            const resTags = await fetch('../php_backend/public/tags.php');
+            const resTags = await fetch('../php_backend/public/tags.php?unassigned=1');
             const allTags = await resTags.json();
+            if (allTags.length === 0) {
+                showMessage('No unassigned tags available');
+                return;
+            }
             const tagOptions = allTags.map(t => `${t.id}: ${t.name}`).join('\n');
             const tagId = prompt('Select Tag:\n' + tagOptions);
             if (tagId === null) return;
