--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,6 +14,27 @@
             <h1 class="text-2xl font-semibold mb-4">Welcome to Finance Manager</h1>
             <p>Select an option from the menu to get started.</p>
             <p id="version">Version: loading...</p>
+
+            <section class="mt-8">
+                <h2 class="text-xl font-semibold mb-4">What You Can Do</h2>
+                <ul class="list-disc pl-5 space-y-2">
+                    <li>Upload OFX files to import your bank statements.</li>
+                    <li>Explore your finances through dashboards:
+                        <ul class="list-disc pl-5 space-y-1">
+                            <li>Yearly dashboard summarises activity for a selected year.</li>
+                            <li>All years dashboard compares trends across years.</li>
+                            <li>Monthly dashboard shows month-by-month results.</li>
+                        </ul>
+                    </li>
+                    <li>View monthly statements to review individual transactions.</li>
+                    <li>Generate detailed transaction reports.</li>
+                    <li>Search transactions to find specific payments or receipts.</li>
+                    <li>Organise data by managing tags, categories and groups.</li>
+                    <li>Identify untagged items via the Missing Tags page.</li>
+                    <li>Run background processes and review application logs.</li>
+                    <li>Manage user accounts and log out when you're done.</li>
+                </ul>
+            </section>
         </main>
     </div>
 
