Add descriptive text to user pages

--- a/frontend/processes.html
+++ b/frontend/processes.html
@@ -12,6 +12,7 @@
         <nav id="menu" class="w-64 bg-white border-r p-6"></nav>
         <main class="flex-1 p-6">
             <h1 class="text-2xl font-semibold mb-4">Run Processes</h1>
+            <p class="mb-4">Run background tasks like auto-tagging and category assignment.</p>
             <div class="space-x-4">
                 <button id="tagging-btn" class="bg-blue-600 text-white px-4 py-2 rounded">Run Tagging</button>
                 <button id="categories-btn" class="bg-blue-600 text-white px-4 py-2 rounded">Apply Categories</button>
