--- a/frontend/all_years_dashboard.html
+++ b/frontend/all_years_dashboard.html
@@ -13,6 +13,7 @@
         <nav id="menu" class="w-64 bg-white border-r p-6"></nav>
         <main class="flex-1 p-6">
             <h1 class="text-2xl font-semibold mb-4">All Years Dashboard</h1>
+            <p class="mb-4">Compare financial totals across every recorded year.</p>
 
             <h2 class="text-xl font-semibold mt-6 mb-2">Tag Totals</h2>
             <div id="tags-table" class="mt-2"></div>
