--- a/frontend/logs.html
+++ b/frontend/logs.html
@@ -13,6 +13,7 @@
         <nav id="menu" class="w-64 bg-white border-r p-6"></nav>
         <main class="flex-1 p-6">
             <h1 class="text-2xl font-semibold mb-4">Application Logs</h1>
+            <p class="mb-4">Review recent log entries to monitor system activity.</p>
             <div id="logs-grid" class="mt-4"></div>
         </main>
     </div>
