--- a/frontend/missing_tags.html
+++ b/frontend/missing_tags.html
@@ -12,6 +12,7 @@
         <nav id="menu" class="w-64 bg-white border-r p-6"></nav>
         <main class="flex-1 p-6">
             <h1 class="text-2xl font-semibold mb-4">Missing Tags</h1>
+            <p class="mb-4">Identify transactions that have not yet been tagged.</p>
             <div id="untagged-table"></div>
         </main>
     </div>
