--- a/frontend/monthly_dashboard.html
+++ b/frontend/monthly_dashboard.html
@@ -13,6 +13,7 @@
         <nav id="menu" class="w-64 bg-white border-r p-6"></nav>
         <main class="flex-1 p-6">
             <h1 class="text-2xl font-semibold mb-4">Monthly Dashboard</h1>
+            <p class="mb-4">View income and outgoings for a chosen month.</p>
             <label for="year-select" class="block">Year:
                 <select id="year-select" class="border p-2 rounded w-full"></select>
             </label>
