--- a/frontend/monthly_statement.html
+++ b/frontend/monthly_statement.html
@@ -13,6 +13,7 @@
         <nav id="menu" class="w-64 bg-white border-r p-6"></nav>
         <main class="flex-1 p-6">
             <h1 class="text-2xl font-semibold mb-4">Monthly Statement</h1>
+            <p class="mb-4">Select a month to view a detailed list of transactions.</p>
             <form id="statement-form" class="space-y-4">
                 <label for="year" class="block">Year:
                     <select id="year" name="year" class="border p-2 rounded w-full"></select>
