--- a/frontend/report.html
+++ b/frontend/report.html
@@ -13,6 +13,7 @@
         <nav id="menu" class="w-64 bg-white border-r p-6"></nav>
         <main class="flex-1 p-6">
             <h1 class="text-2xl font-semibold mb-4">Transaction Reports</h1>
+            <p class="mb-4">Generate detailed transaction reports filtered by your chosen criteria.</p>
             <form id="report-form" class="space-y-4">
                 <label class="block">Category: <select id="category" class="border p-2 rounded w-full"></select></label>
                 <label class="block">Tag: <select id="tag" class="border p-2 rounded w-full"></select></label>
