--- a/frontend/search.html
+++ b/frontend/search.html
@@ -13,6 +13,7 @@
         <nav id="menu" class="w-64 bg-white border-r p-6"></nav>
         <main class="flex-1 p-6">
             <h1 class="text-2xl font-semibold mb-4">Search Transactions</h1>
+            <p class="mb-4">Find specific transactions using keywords and view the results below.</p>
             <form id="search-form" class="space-y-4">
                 <input type="text" id="term" placeholder="Search value" class="border p-2 rounded w-full">
                 <button type="submit" class="bg-blue-600 text-white px-4 py-2 rounded">Search</button>
