--- a/frontend/tags.html
+++ b/frontend/tags.html
@@ -12,6 +12,7 @@
         <nav id="menu" class="w-64 bg-white border-r p-6"></nav>
         <main class="flex-1 p-6">
             <h1 class="text-2xl font-semibold mb-4">Manage Tags</h1>
+            <p class="mb-4">Create new tags and manage existing ones for categorising transactions.</p>
             <form id="tag-form" class="space-y-4">
                 <label class="block">Tag Name<br><input type="text" id="tag-name" class="border p-2 rounded w-full"></label>
                 <label class="block">Keyword (for auto tagging)<br><input type="text" id="tag-keyword" class="border p-2 rounded w-full"></label>
