--- a/frontend/transaction.html
+++ b/frontend/transaction.html
@@ -11,6 +11,7 @@
         <nav id="menu" class="w-64 bg-white border-r p-6"></nav>
         <main class="flex-1 p-6">
             <h1 class="text-2xl font-semibold mb-4">Transaction Details</h1>
+            <p class="mb-4">Review or edit the information for a single transaction.</p>
             <div id="transaction-details" class="mt-4"></div>
         </main>
     </div>
