--- a/frontend/upload.html
+++ b/frontend/upload.html
@@ -12,6 +12,7 @@
         <nav id="menu" class="w-64 bg-white border-r p-6"></nav>
         <main class="flex-1 p-6">
             <h1 class="text-2xl font-semibold mb-4">Upload OFX File</h1>
+            <p class="mb-4">Upload an OFX statement from your bank to import transactions.</p>
             <form action="../php_backend/public/upload_ofx.php" method="POST" enctype="multipart/form-data" class="space-y-4">
                 <input type="file" name="ofx_file" accept=".ofx" required class="block w-full">
                 <button type="submit" class="bg-blue-600 text-white px-4 py-2 rounded">Upload</button>
